[gd_scene load_steps=3 format=3 uid="uid://cvpk2ahpldson"]

[ext_resource type="FontFile" uid="uid://bnqne1ta3t25r" path="res://assets/fonts/Rubik-SemiBold.ttf" id="1_6v2x8"]
[ext_resource type="Script" path="res://scenes/table.gd" id="1_m88p8"]

[node name="table" type="Node2D"]
script = ExtResource("1_m88p8")

[node name="main green background" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 1925.0
offset_bottom = 1089.0
size_flags_horizontal = 3
color = Color(0.0745098, 0.588235, 0.152941, 1)

[node name="title black background" type="ColorRect" parent="."]
offset_left = 13.0
offset_top = 12.0
offset_right = 611.0
offset_bottom = 134.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 0.717647)

[node name="lblTitle" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 111.0
offset_top = 21.0
offset_right = 535.0
offset_bottom = 126.0
grow_horizontal = 2
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/normal_font = ExtResource("1_6v2x8")
theme_override_font_sizes/normal_font_size = 84
bbcode_enabled = true
text = "[wave amp=5
 freq=10]Blackjack[/wave]"
fit_content = true

[node name="button contrainer" type="VBoxContainer" parent="."]
offset_left = 15.0
offset_top = 247.0
offset_right = 605.0
offset_bottom = 805.0
theme_override_constants/separation = -4

[node name="start game button" type="Button" parent="button contrainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_6v2x8")
theme_override_font_sizes/font_size = 90
text = "Start"

[node name="continue game button" type="Button" parent="button contrainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_6v2x8")
theme_override_font_sizes/font_size = 90
text = "Continue"

[node name="info game button" type="Button" parent="button contrainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_6v2x8")
theme_override_font_sizes/font_size = 90
text = "Info"

[node name="quit game button" type="Button" parent="button contrainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_6v2x8")
theme_override_font_sizes/font_size = 90
text = "Quit
"

[node name="button contrainer2" type="VBoxContainer" parent="."]
offset_left = 1503.0
offset_top = 20.0
offset_right = 1905.0
offset_bottom = 248.0
theme_override_constants/separation = -4

[node name="save data" type="Button" parent="button contrainer2"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_6v2x8")
theme_override_font_sizes/font_size = 80
text = "Save Data"

[node name="load data" type="Button" parent="button contrainer2"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_6v2x8")
theme_override_font_sizes/font_size = 80
text = "Load Data"

[connection signal="pressed" from="button contrainer/start game button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="button contrainer/continue game button" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="button contrainer/quit game button" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="button contrainer2/save data" to="." method="_on_save_data_pressed"]
[connection signal="pressed" from="button contrainer2/load data" to="." method="_on_load_data_pressed"]
